--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run test
+        run: npm i
         run: npm run test
         # cmd: ['npm','run','test']
 
